--- a/Assignment1/static/sample-app.css
+++ b/Assignment1/static/sample-app.css
@@ -1,3 +1,8 @@
 .jumbotron {
-  margin-top: 1em;  // add a little space
+  margin-top: 1em;
+  padding-left: 10%;
+}
+
+.container {
+  width: auto;
 }
