--- a/Assignment1/templates/response.html
+++ b/Assignment1/templates/response.html
@@ -6,7 +6,7 @@
         <h4>Here is your Response for Price:</h4>
         <br>
         <p>Unit Price: {{ unitPrice }}</p><br>
-        <p>Validation Until: {{ validation }}</p>
+        <p>Valid Until: {{ validation }}</p>
         <form action="" class="form-inline" method="get">
             <input class="btn btn-default" type="submit" formaction="/rfq" value="Back">
         </form>
