--- a/Assignment1/templates/request.html
+++ b/Assignment1/templates/request.html
@@ -5,14 +5,26 @@
         <br>
         <h4>Please Enter Request for Quote:</h4>
         <br>
-        <form action="" class="form-inline" method="post">
-            <input type="text" class="form-control" placeholder="RFQ ID" name="rfqId" value="{{request.form.rfqId}}">
-            <input type="text" class="form-control" placeholder="Account ID" name="acctId" value="{{request.form.acctId}}">
-            <input type="text" class="form-control" placeholder="Product Number" name="productNum" value="{{request.form.productNum}}">
-            <input type="text" class="form-control" placeholder="Product Category" name="productCat" value="{{request.form.productCat}}">
-            <input type="text" class="form-control" placeholder="Quantity" name="quantity" value="{{request.form.quantity}}">
-            <input class="btn btn-default" type="submit" formaction="/json" value="JSON Request">
-            <input class="btn btn-default" type="submit" formaction="/protobuf" value="Protocal Buffer Request">
+        <form action="" method="post">
+            <div class="form-group">
+            	<input type="text" class="form-control" placeholder="RFQ ID" name="rfqId" value="{{request.form.rfqId}}">
+            </div>
+            <div class="form-group">
+            	<input type="text" class="form-control" placeholder="Account ID" name="acctId" value="{{request.form.acctId}}">
+            </div>
+            <div class="form-group">
+            	<input type="text" class="form-control" placeholder="Product Number" name="productNum" value="{{request.form.productNum}}">
+            </div>
+            <div class="form-group">
+            	<input type="text" class="form-control" placeholder="Product Category" name="productCat" value="{{request.form.productCat}}">
+            </div>
+            <div class="form-group">
+            	<input type="text" class="form-control" placeholder="Quantity" name="quantity" value="{{request.form.quantity}}">
+            </div>
+            <div class="form-group">
+            	<input class="btn btn-default" type="submit" formaction="/json" value="JSON Request">
+            	<input class="btn btn-default" type="submit" formaction="/protobuf" value="Protocol Buffer Request">
+            </div>
         </form>
         <br>
     </div>
